# wallpaper-engine-controller

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  installer.rs  main.rs  monitor.rs  wallpaper.rs
src/install/: mod.rs  tui.rs
