[package]
name = "wallpaper-controller"
version = "0.1.0"
edition = "2021"
description = "A utility to control Wallpaper Engine based on desktop visibility"

[dependencies]
libvisdesk = "0.1.2"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
tokio = { version = "1", features = ["full"] }