[package]
name = "wallpaper-controller"
version = "0.1.1"
edition = "2021"
description = "A utility to control Wallpaper Engine based on desktop visibility"

[dependencies]
libvisdesk = "0.1.6"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
sentry = { version = "0.42.0", features = ["logs", "tracing"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
lto = "fat"            # Link-time optimization for better inlining
codegen-units = 1      # Fewer units = better optimization
opt-level = 3
panic = "abort"        # Smaller binary, no unwinding
strip = true