[package]
name = "wallpaper-controller"
version = "0.2.0"
edition = "2021"
description = "A utility to control Wallpaper Engine based on desktop visibility"

[dependencies]
libvisdesk = "0.1.7"
clap = { version = "4.4", features = ["derive", "string"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
sentry = { version = "0.42.0", features = ["logs", "tracing"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows = { version = "0.61.3", features = ["Win32_System_Console", "Win32_Security"] }
single-instance = "0.3.3"
windows-service = "0.8.0"
windows-elevate = "0.1.0"
nameof = "1.3.0"
blake3 = "1.5"
dialoguer = "0.11"
dirs = "5"
anyhow = "1"

[profile.release]
lto = "fat"            # Link-time optimization for better inlining
codegen-units = 1      # Fewer units = better optimization
opt-level = 3
panic = "abort"        # Smaller binary, no unwinding
strip = true